Prevent navbar BG flicker.

--- a/components/layout/top-nav/top-nav.module.scss
+++ b/components/layout/top-nav/top-nav.module.scss
@@ -17,7 +17,6 @@
   transition: all 0.4s;
 
   &.withBG {
-    background-color: var(--primary-deep);
     isolation: isolate;
     top: 0;
     // height: 10vh;
